--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -24,6 +24,8 @@
   --color-blockquote: #999999;
   --color-twitter: rgb(29, 161, 242);
   --color-link-bg: rgb(200, 200,200, 0.25);
+
+  --max-post-width: 745px;
 }
 
 /* http://meyerweb.com/eric/tools/css/reset/ 
