--- a/layouts/partials/post-header.html
+++ b/layouts/partials/post-header.html
@@ -2,7 +2,7 @@
     <div class="header header-frame">
         <div>
           {{with .Title}}
-            <div class="header__title">{{.}}</div>
+            <h1 class="header__title">{{.}}</h1>
           {{end}}
             {{with .Description}}
                 <div class="header__description">{{.}}</div>
