--- a/assets/scss/_single.scss
+++ b/assets/scss/_single.scss
@@ -94,11 +94,15 @@
   ul {
     list-style-type: disc;
     padding-left: 1rem;
+    margin-left: 1rem;
+    margin-top: 0.8rem;
     color: var(--color-text-2);
   }
   ol {
     list-style-type: decimal;
     padding-left: 1rem;
+    margin-left: 1rem;
+    margin-top: 0.8rem;
     color: var(--color-text-2);
   }
   li:not(:last-of-type) {
