--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -19,5 +19,5 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32.png">
 
     {{ $style := resources.Get "scss/style.scss" | resources.ToCSS | resources.Minify | resources.Fingerprint }}
-    <link rel="stylesheet" href="{{$style.Permalink}}" >
+    <link rel="stylesheet" href="{{$style.RelPermalink}}" >
 </head>
