--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -44,8 +44,8 @@ footer {
 @media (min-width: $screen-md) {
 
   .social-link {
-    width: 1.5rem;
-    height: 1.5rem;
-    margin:0;
+    width: 2.5rem;
+    height: 2.5rem;
+    margin:0rem;
   }
 } 
