--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -166,7 +166,7 @@ header {
     display: inline-block;
     -webkit-text-stroke: 1px var(--color-text);
     color: transparent;
-    background: linear-gradient(90deg, var(--color-extra-2) 0%, var(--color-extra-2) 100%);
+    background: linear-gradient(90deg,#fc7979 0%,#fc7979 100%);
     background-position: left;
     background-size: 0%;
     background-repeat: no-repeat;
