--- a/assets/scss/_li.scss
+++ b/assets/scss/_li.scss
@@ -39,7 +39,7 @@
 
   &__date {
     color: var(--color-text-2);
-    font-family: monospace;
+    font-family: "roozname";
   }
   &--left {
     flex: 1 1 47%;
