--- a/assets/scss/_single.scss
+++ b/assets/scss/_single.scss
@@ -71,7 +71,7 @@
     margin-left: 1rem;
     padding-left: 1rem;
     border-left: 4px solid var(--color-border);
-    font-family: $monospace;
+    font-family: "roozname";
   }
   code {
     padding: 1px 3px;
@@ -184,7 +184,7 @@
     }
   }
   cite {
-    font-family: $monospace;
+    font-family: "roozname";
   }
   sub {
     vertical-align: sub;
