--- a/layouts/partials/button.html
+++ b/layouts/partials/button.html
@@ -1,5 +1,15 @@
 <button class="floating-button">
     <a class="floating-button__link" href="{{.Site.BaseURL}}">
-        <span>home</span>
+
+        <span
+
+  target="_blank"
+  class="social-link"
+  title="logo link"
+  rel="noopener"
+  >
+  {{partial "svg/gheychi-logo.svg"}}
+        </span>
     </a>
+    
 </button>
