--- a/layouts/partials/social.html
+++ b/layouts/partials/social.html
@@ -4,9 +4,9 @@
   href="{{ . }}"
   target="_blank"
   class="social-link"
-  title="Stack Overflow link"
+  title="RSS link"
   rel="noopener"
-  aria-label="follow on Stack Overflow——Opens in a new window"
+  aria-label="follow on RSS——Opens in a new window"
 >
   {{partial "svg/iconmonstr-stackoverflow-2.svg"}}
 </a>
