--- a/assets/scss/_featured-posts.scss
+++ b/assets/scss/_featured-posts.scss
@@ -1,6 +1,6 @@
 .featured-title {
   font-size: 1.5rem;
-  font-family: monospace;
+  font-family: "roozname";
   margin: 0 auto;
   @media (min-width: $screen-lg) {
     width: 80%;
@@ -66,7 +66,7 @@
   // }
 
   & time {
-    font-family: monospace;
+    font-family: "roozname";
   }
 
   &:hover {
