--- a/layouts/partials/post-header.html
+++ b/layouts/partials/post-header.html
@@ -36,7 +36,7 @@
                     {{ end }}
                 {{ end }}
             </ul>
-            <button class="header-nav-list__nav-btn">navigation</button>
+            <button class="header-nav-list__nav-btn">فهرست</button>
         </nav>
         <button class="mb-header__menu-btn">
             <span class="mb-header__menu-btn-line"></span>
