--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -34,7 +34,7 @@
           {{ end }}
         {{ end }}
       </ul>
-      <button class="header-nav-list__nav-btn {{ with .Site.Params.cssonly}} {{ if eq . true }} css-only {{ end }} {{end}}">فهرست</button>
+      <button class="header-nav-list__nav-btn {{ with .Site.Params.cssonly}} {{ if eq . true }} css-only {{ end }} {{end}}">نقشه
       {{partial "navigation" .}}
     </nav>
     {{with .Site.Params.cssonly}}
