--- a/layouts/partials/post-header.html
+++ b/layouts/partials/post-header.html
@@ -1,4 +1,6 @@
 <header>
+    <link rel="icon" type="image/png" sizes="32x32" href="static/favicon-32.png">
+
     <div class="header header-frame">
         <div>
           {{with .Title}}
@@ -36,7 +38,7 @@
                     {{ end }}
                 {{ end }}
             </ul>
-            <button class="header-nav-list__nav-btn">فهرست</button>
+            <button class="header-nav-list__nav-btn">نقشه</button>
         </nav>
         <button class="mb-header__menu-btn">
             <span class="mb-header__menu-btn-line"></span>
