--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -16,9 +16,9 @@ header {
   align-items: center;
 
   &__title {
-    font-size: 2rem;
+    font-size: 2.8rem;
     font-weight: bold;
-    margin-bottom: 0.5rem;
+    margin-bottom: 0.7rem;
     &--nomargin {
       margin-bottom: 0;
     }
@@ -54,6 +54,8 @@ header {
     border: 1px solid var(--color-border-dark);
     max-height: 30px;
     cursor: pointer;
+    font-family: "roozname";
+    font-size: 1.3rem;
     @media (min-width: $screen-lg) {
       display: inline-block;
     }
@@ -130,7 +132,7 @@ header {
     }
   }
   &__title {
-    font-size: 2.5rem;
+    font-size: 0.1rem;
     font-weight: 700;
     & text {
       animation: 2s stroke alternate;
@@ -152,7 +154,7 @@ header {
   &__item {
     opacity: 0;
     transition: opacity 0.3s ease;
-    font-size: 2.5rem;
+    font-size: 2.8rem;
     margin: 1rem auto;
     text-align: center;
   }
