--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -29,6 +29,7 @@ header {
   flex-flow: row wrap;
   justify-content: center;
   align-items: center;
+  font-family: "roozname";
 
   &--menu {
     display: none;
