--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -8,6 +8,10 @@
     font-style: normal;
 
 }
+
+@import url('https://fonts.googleapis.com/css2?family=Vazirmatn&display=swap');
+
+
 :root {
   --color-bg: rgba(255,247,240, 1);
   --color-card-bg: rgba(250,250,250,0.8);
@@ -57,7 +61,7 @@ time, mark, audio, video {
 	padding: 0;
 	border: 0;
 	font: inherit;
-	font-size: 101%;
+	font-size: 100%;
 	vertical-align: baseline;
   direction: rtl;
 
