--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -54,4 +54,9 @@
     {{end}}
   </div>
   {{partial "mobile-header-nav" .}}
+
+  <link rel="alternate"
+      type="application/rss+xml"
+      href="{{.Site.BaseURL }}/index.xml"
+      title="{{ .Site.Title }}">
 </header>
