--- a/assets/scss/_single.scss
+++ b/assets/scss/_single.scss
@@ -206,6 +206,12 @@ font-size: 0.5rem;
     border-radius: 2px;
     border: 1px solid var(--color-border);
   }
+
+  ital {
+    font-style: italic;
+
+  }
+
   strong {
     font-weight: bold;
   }
