--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -67,6 +67,12 @@ time, mark, audio, video {
 
 }
 
+img{
+	width: 400px;
+	align: center;
+
+}
+
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
